handle-slider-view-mode-language

--- a/src/features/i18n/ar.json
+++ b/src/features/i18n/ar.json
@@ -10,13 +10,21 @@
     "shop": "المتجر",
     "about": "حول",
     "cart": "عربة التسوق",
-    "login": "تسجيل الدخول"
+    "login": "تسجيل الدخول",
+    "pages": "صفحات",
+    "elements": "عناصر",
+    "news": "الأخبار",
+    "contact": "اتصل",
+    "search": "بحث..."
   },
   "Home": {
     "heroTitle": "مستقبل التسوق",
     "heroDesc": "اختبر الجودة الفاخرة مع مجموعتنا المختارة من التقنيات المستقبلية والإكسسوارات. مصممة لأسلوب الحياة العصري.",
     "ctaShop": "تسوق الآن",
     "learnMore": "اعرف المزيد",
+    "featuredBrands": "علامات تجارية مميزة",
+    "brand": "علامة تجارية",
+    "categoriesTitle": "التصنيفات",
     "features": {
       "fastDelivery": "توصيل سريع",
       "securePayment": "دفع آمن",
@@ -39,31 +47,66 @@
     "filter": "تصفية",
     "price": "السعر",
     "filterPrice": "تصفية السعر",
-    "productTags": "وسوم المنتجات"
+    "productTags": "وسوم المنتجات",
+    "buyNow": "شراء الآن",
+    "viewDetails": "عرض التفاصيل",
+    "connect": "اتصال",
+    "select": "اختر",
+    "premium": "مميز",
+    "sale": "تخفيض"
   },
   "Footer": {
-    "aboutTitle": "عن كارني شوب",
-    "aboutText": "ولكن لا بد أن أوضح لك أن كل هذه الأفكار المغلوطة حول استنكار النشوة وتمجيد الألم نشأت بالفعل، وسأعرض لك التفاصيل لتكتشف حقيقة وأساس تلك السعادة البشرية.",
+    "aboutTitle": "عن TechStore",
+    "aboutText": "نحن نقدم أفضل المنتجات التقنية بجودة عالية وأسعار تنافسية. وجهتك الأولى لكل ما يتعلق بالتكنولوجيا.",
     "quickLinks": "روابط سريعة",
-    "services": "خدماتنا",
-    "recentNews": "آخر الأخبار",
+    "categories": "التصنيفات",
+    "newsletter": "النشرة البريدية",
+    "newsletterDesc": "اشترك للحصول على عروض خاصة وهدايا مجانية وصفقات لا تتكرر.",
     "links": {
-      "help": "المساعدة والاتصال",
-      "returns": "الإرجاع والاسترداد",
-      "onlineStores": "المتاجر الإلكترونية",
-      "payment": "طرق الدفع",
-      "terms": "الشروط والأحكام"
+      "home": "الرئيسية",
+      "shop": "المتجر",
+      "about": "من نحن",
+      "contact": "اتصل بنا",
+      "faq": "الأسئلة الشائعة"
     },
-    "serviceList": {
-      "meat": "توصيل اللحوم الطازجة",
-      "organic": "منتجات عضوية",
-      "butcher": "خدمات الجزارة",
-      "cuts": "قطوعات مخصصة",
-      "catering": "تموين المناسبات"
+    "categoryList": {
+      "laptops": "لابتوب وكمبيوتر",
+      "smartphones": "هواتف ذكية",
+      "gaming": "معدات الألعاب",
+      "accessories": "إكسسوارات",
+      "cameras": "كاميرات ودرونز"
     },
-    "news": {
-      "title1": "تصميم فيديوهات أخلاقية وتلميعها"
-    },
-    "copyright": "حقوق النشر © 2020 كارني شوب. جميع الحقوق محفوظة."
+    "copyright": "© {year} TechStore. جميع الحقوق محفوظة."
+  },
+  "Auth": {
+    "loginTitle": "مرحبًا بعودتك",
+    "loginDesc": "سجّل الدخول لمتابعة تجربة التسوق.",
+    "phone": "رقم الهاتف",
+    "password": "كلمة المرور",
+    "forgot": "هل نسيت كلمة المرور؟",
+    "signIn": "تسجيل الدخول",
+    "signingIn": "جارٍ تسجيل الدخول...",
+    "dontHaveAccount": "ليس لديك حساب؟",
+    "signUp": "إنشاء حساب",
+    "signupTitle": "أنشئ حسابك",
+    "signupDesc": "بضع تفاصيل للبدء.",
+    "fullName": "الاسم الكامل",
+    "firstName": "الاسم الأول",
+    "lastName": "اسم العائلة",
+    "email": "البريد الإلكتروني",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "creatingAccount": "جارٍ إنشاء الحساب...",
+    "alreadyHaveAccount": "هل لديك حساب بالفعل؟",
+    "login": "تسجيل الدخول",
+    "forgotTitle": "إعادة تعيين كلمة المرور",
+    "forgotDesc": "أدخل بريدك الإلكتروني لتلقي رمز التحقق.",
+    "sending": "جارٍ الإرسال...",
+    "sendCode": "أرسل الرمز",
+    "verifyTitle": "تحقق وأعد التعيين",
+    "verifyDesc": "أدخل الرمز المكون من 6 أرقام واضبط كلمة مرور جديدة.",
+    "saving": "جارٍ الحفظ...",
+    "savePassword": "حفظ كلمة المرور",
+    "confirm": "تأكيد كلمة المرور",
+    "backTo": "العودة إلى"
   }
 }
